options/options.css
*,
*:before,
*:after {
	box-sizing: border-box;
}

html {
	font-size: 16px;
}

body {
	margin: 2rem;
	font: 1rem/1.5 "Helvetica Neue", Arial, sans-serif;
	color: #5a5a5a;
	min-width: 34rem;
}

a {
	color: #0074d9;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

h1, h2, h3, h4 {
	margin: 0 0 .5rem;
	font-weight: normal;
	line-height: 1;
	color: #2a2a2a;
	letter-spacing: -.05em;
}

h1 {
	font-size: 3rem;
}

h2 {
	font-size: 2.5rem;
}

h3 {
	padding-top: 1rem;
	margin-top: 2rem;
	font-size: 1.75rem;
}

h4 {
	font-size: 1.25rem;
}

h3:first-child {
	margin-top: 0;
	padding-top: 0;
}

p {
	margin: 0 0 1rem;
}

.muted {
	font-size: 80%;
	color: #999;
}

.container {
	max-width: 35rem;
	margin-left: auto;
	margin-right: auto;
}

.footer {
	margin-top: 3rem;
	padding-bottom: 1rem;
	padding-top: 3rem;
	text-align: center;
	border-top: 1px solid #eee;
}

.footer p {
	margin-bottom: .5rem;
}

.checkbox {
	display: block;
}

.checkbox-sub {
	margin-left: 1.5rem;
}

